# dotfiles

./: .Xresources.cgt  .bashrc  .clang-format  .clang-format.cgt  .ghci  .gitattributes  .gitignore  .gtkrc-2.0.cgt  .inputrc  .luarc.json  .replrc  .stylua.toml.cgt  .tmux.conf  .vieterrc.cgt  .wezterm.lua  Makefile  README.md  build.zig  build.zig.zon  build_common.zig  cg_lazies.lua  cg_opts.lua  confgen.lua  flake.nix  hxformat.json  hxformat.json.cgt  justfile  rustfmt.toml  setup.rkt
.cargo/: config.toml  config.toml.cgt  credentials.toml.cgt
.config/: darklyrc  gamemode.ini.cgt  lesskey.cgt  nftables.conf  wayfire.ini.cgt  zls.json  zls.json.cgt
.gnupg/: gpg-agent.conf
.librewolf/: librewolf.overrides.cfg  librewolf.overrides.cfg.cgt
.ssh/: config
alacritty/: alacritty.yml
cgassets/: constsiz_opts.json.cgt  constsiz_opts.zon.cgt  dconf.ini.cgt  homepage.html.cgt  mzte-nv-opts.zon.cgt  mzteriver-keys.zon.cgt  mzteriver-opts.zon.cgt  qutebrowser.json.cgt
cgdata/: README.md  mpv.lua  waybar.lua  wm.lua  xplr.lua
cgnix/: .gitignore  README.md  default.nix  jvm.nix  nvim-tools.nix
conky/: conky.conf
dunst/: dunstrc
fish/: config.fish
i3/: config
i3status/: Cargo.toml  README.md  config
i3status/src/: colors.rs  json.rs  main.rs  workers.rs
kitty/: kitty.conf
lsd/: config.yaml
mzte-nv/: Makefile  README.md  build.zig  build.zig.zon  build_common.zig  fallback-opts.zon
mzte_nv/: README.md  build.zig
nix/: default.nix  mcdev.nix  (+5 more)
prompt/: .gitignore  Cargo.toml  build.zig  gyro.zzz  install.sh
prompt/src/: ffi.zig  fish_mode.rs  main.rs  main.zig  prompt.zig  theme.rs
scripts/i3status/: Cargo.toml
scripts/i3status/src/: catppuccin.rs  gpu.rs  main.rs
(+644 files in other folders)
