[package]
name = "i3status"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = "0.0.11"
serde_json = "1.0.66"
chrono = "0.4.19"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.tokio]
version = "1.9.0"
features = ["macros", "rt-multi-thread", "time", "sync", "process"]
