[package]
name = "prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.powerline]
git = "https://github.com/Gajus84/powerline-rust.git"
default-features = false
features = ["bare-shell", "libgit"]
