[package]
name = "i3status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
i3status-rs = { git = "https://github.com/greshake/i3status-rust.git" }
serde_json = "1.0.96"
tokio = "1.28.1"
